# lancy

./: CLAUDE.md  Cargo.toml
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: isa-x64-engineer.md  pass-engineer.md  regalloc-expert.md  test-validator.md
.claude/commands/: add-inst.md  check.md
.github/workflows/: rust.yml
crates/lancy-llvm/: Cargo.toml
crates/lancy-llvm/src/: converter.rs  error.rs  lib.rs
crates/lancy-llvm/tests/: cpp_testdata.rs  hand_written_ir.rs
crates/lancy-llvm/tests/testdata/: abs_val.cpp  add.cpp  clamp.cpp  cube_sum.cpp  diff_squares.cpp  factorial_iter.cpp  fib_iter.cpp  fib_recursive.cpp  fib_unrolled.cpp  gcd_euclid.cpp  horner.cpp  mad.cpp  map_square_lookup.cpp  mul.cpp  my_max.cpp  pow_int.cpp  sign.cpp  six_args.cpp  stress_arith.cpp  string_build.cpp  sub.cpp  sum_to_n.cpp  vector_sort_median.cpp  vector_sum.cpp  weighted_sum.cpp
docs/: ARCHITECTURE.md  ROADMAP.md
src/: lib.rs
src/codegen/: mod.rs  passes.rs
src/codegen/analysis/: cfg.rs  dom_tree.rs  layout.rs  liveness.rs  mod.rs
src/codegen/isa/x64/: backend.rs  builder.rs  calling_convention.rs  fuzz.rs  inst.rs  mod.rs  pipeline.rs  regs.rs  sysv.rs
src/codegen/jit/: mod.rs
src/codegen/passes/: aggregate_lowering.rs  mod.rs  ssa_destruction.rs
src/codegen/regalloc/: fast.rs  linear_scan.rs  mod.rs  regalloc.rs  regbind.rs
src/codegen/tir/: backend.rs  block.rs  calling_convention.rs  cfg.rs  dfg.rs  errors.rs  func.rs  inst.rs  mod.rs  reg.rs  types.rs
src/codegen/x64/: lower.rs  mod.rs
src/support/: bitset.rs  mod.rs  slotmap.rs
(+5 files in other folders)
